# myfirstrepo

./: mysecondfile.txt
new-environment/myenv1/: 3.9  environment.yml  pyproject.toml  requirements.txt
